--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
       <!--This game was made by S K for the Woods Hole Oceanographic Institution, autumn 2021.-->
     <script src="sketch.js"></script>
-  
+      <p>SK for WHOI, 2021.</p>
 
 </body></html>
