--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
-    <script src="p5.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <script src="p5.play.js" type="text/javascript"></script>
+    <script src="p5.js" crossorigin></script>
+    <script src="p5.sound.min.js" crossorigin></script>
+    <script src="p5.play.js" type="text/javascript" crossorigin></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
@@ -9,6 +9,7 @@
   <body>
       <!--This game was made by S K for the Woods Hole Oceanographic Institution, autumn 2021.-->
     <script src="sketch.js"></script>
+      <canvas id="defaultCanvas0" class="p5Canvas" width="1920" height="1280" style="width: 960px; height: 640px;"></canvas>
       <p align="right">SK for WHOI, 2021.</p>
 
 </body></html>
